# fluky

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  flake.nix  vcpkg.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/fluky/: concepts.hpp  fluky.hpp  jsf64.hpp  pcg64_dxsm.hpp  romu.hpp  sfc64.hpp  splitmix64.hpp  squares64.hpp  wyrand.hpp  xoroshiro128pp.hpp  xoshiro256ss.hpp
include/fluky/detail/: common.hpp  splitmix64.hpp
test/: CMakeLists.txt
test/source/: fluky_test.cpp  jsf64.cpp  pcg64_dxsm.cpp  rng_performance.cpp  romu_duo.cpp  romu_trio.cpp  sfc64.cpp  splitmix64.cpp  squares64.cpp  util.hpp  wyrand.cpp  xoroshiro128pp.cpp  xoshiro256ss.cpp
